prost-reflect-derive/tests/missing_name.stderr
error: missing required argument 'message_name'
 --> tests/missing_name.rs:4:1
  |
4 | #[prost_reflect(file_descriptor = "FILE_DESCRIPTOR")]
  | ^
